# Autonomous-Mobile-Robot

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  __editable__.pj_lidar-1.0.0.pth  __editable___pj_lidar_1_0_0_finder.py  deploy.sh  docker-compose.yml  docker-entrypoint.sh  frames_2026-03-01_13.40.37.gv  prob.py  setup.py  tcp_terminal.py  udp_listener_gui.py  udp_listener_test.py  udp_plot.py
.github/workflows/: ci.yml
c++/pj_lidar/: udp_handler_new.h
docs/: CHANGELOG.md  CHEATSHEET.md  INSTALL.md  LICENSE  PROTOCOL.md  QUICKSTART.md  README.md
esp32_pj/: esp32_pj.vpj  esp32_pj.vpw  esp32_pj.vpwhist  esp32_pj.vtg
firmware/robot_lidar_v2/robot_lidar_version2/: example_data.txt  make_rar.bat  make_rar_ino.bat  robot_lidar_version2.ino
firmware/robot_lidar_v2/robot_lidar_version2/include/: display_handler.h  lidar_data_new.h  udp_handler_new.h
launch/: launch_all.py
pj_lidar-1.0.0.dist-info/: METADATA  RECORD  direct_url.json  entry_points.txt
python/pj_lidar/: __init__.py  config_loader.py  config_validator.py  diagnostics_aggregator.py  esp32_tcp_client.py  frontier_explorer.py  launch_demo.py  launch_slam.py  lidar_motor_controller.py  lidar_udp_server_new.py  robot_controller.py  robot_gui.py  robot_monitor.py  ros2_watchdog.py  scan_state_machine.py  setup_config.py  slam_monitor.py  start_scan.py  static_tf_broadcaster.py  system_diagnostics.py  udp_structs.py  wheel_odometry.py
python/pj_lidar/config/: rviz_config.rviz
python/tests/: tcp_telemetry_server.py  test_config_loader.py  test_lidar_udp.py  test_scan_state_machine.py
resource/: pj_lidar
scripts/: setup_config.py
src/: lidar_processor.cpp
vs_lidar/: vs_lidar.vpj  vs_lidar.vpw  vs_lidar.vpwhist  vs_lidar.vtg
